# latte-cc

./: .gitignore
A/: 0.txt.bkp  1.txt  100.txt  14.txt  15.txt  20.txt  40.txt  400.txt  5.txt  50.txt  60.txt  7.txt  plot.py
A/12/: 12.1.txt
datagrump/: Makefile.am  aimdcontroller.cc  aimdcontroller.hh  controller.cc  controller.hh  lattecontroller.cc  lattecontroller.hh  local-contest  metacontroller.cc  metacontroller.hh  rttaimdcontroller.cc  rttaimdcontroller.hh  rttcontroller.cc  rttcontroller.hh  sender.cc
results/A/: .plot.py.swp  10.txt  1000.txt  11.txt  12.txt  13.txt  2.txt  200.txt  25.txt  30.txt  300.txt  500.txt  70.txt  80.txt  90.txt
results/A/12/: 12.3.txt  12.4.txt  12.5.txt
results/B/: 12_10_2_100.txt  12_10_2_1000.txt  12_1_2_100.txt  12_1_2_1000.txt.2  12_5_2_100.txt  12_5_2_1000.txt  50_1_2_1000.txt  50_1_2_1000.txt.2  50_1_2_1000.txt.3  50_1_2_1000.txt.4  50_1_2_1000.txt.5  plot.py
results/C/: plot.py
results/C/aimd/: 100.txt  120.txt  150.txt  200.txt  50.txt  70.txt  algo.txt.1
results/C/simple/: .algo.txt.swp  100.txt  150.txt  200.txt  250.txt  300.txt  50.txt  60.txt  70.txt  75.txt  85.txt  algo.txt.1
results/D/: notes.txt
results/report/: report.bib  report.tex
